--- a/views/index.njk
+++ b/views/index.njk
@@ -6,8 +6,7 @@
 
 {% block main %}
 <h1 class="title">Key Log</h1>
-<div id="root">
-</div>
+<div id="root"></div>
 {% endblock %}
 
 {% block script %}
