--- a/views/manage.njk
+++ b/views/manage.njk
@@ -5,13 +5,14 @@
 {% endblock %}
 
 {% block main %}
-<h1 class="title unica-one">Manage Keys</h1>
-<br/>
+<h1 class="title">Manage Keys</h1>
 <form>
     <label for="label">Label:</label>
     <input type="text" id="label" name="label" placeholder=" Label Text" />
-    <button type="button">Submit</button>
+    <button type="button">Create Key</button>
 </form>
+<button type="button" onclick="handleDelete(event)">Delete Selected</button>
+<div id="root"></div>
 {% endblock %}
 
 {% block script %}
